--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -22,6 +22,7 @@
                     <li><a href=#>News</a></li>
                     <li><a href=#>Contact</a></li>
                     <li><a href=#>About</a></li>
+                    <li><a href=#>Post </a></li>
                 </ul>
             </nav>
         </div>
