--- a/marketplace/templates/marketplace/home.html
+++ b/marketplace/templates/marketplace/home.html
@@ -1,74 +1,30 @@
 {% extends "marketplace/base.html" %}
 
 {% block content %}
-<div class="container">
-	 <div id="blog" class="row"> 
-                
-                  <div class="col-sm-2 paddingTop20">
-            <nav class="nav-sidebar">
-                <ul class="nav">
-                    <li class="active"><a href="javascript:;"><span class="glyphicon glyphicon-star"></span> News</a></li>
-                    <li><a href="javascript:;">Latest news</a></li>
-                    <li><a href="javascript:;">Updates</a></li>
-                    <li><a href="javascript:;">Training</a></li>
-                    <li><a href="javascript:;">Nutrition</a></li>
-                    <li><a href="javascript:;">Proteins</a></li>
-                    <li><a href="javascript:;">Recipes</a></li>
-                    <li><a href="javascript:;">Challenge</a></li>
-                    <li class="nav-divider"></li>
-                    <li><a href="javascript:;"><i class="glyphicon glyphicon-off"></i> Sign in</a></li>
-                </ul>
-            </nav>
-        </div>
-                 <div class="col-md-10 blogShort">
-                     <h1>Title 1</h1>
-                     <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/guinnes-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
-                     
-                     <article><p>
-                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                         ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
-                         five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
-                         of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-                         Lorem Ipsum.    
-                         </p></article>
-                     <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
-                 </div>
-                  <div class="col-md-10 blogShort">
-                     <h1>Title 2</h1>
-                     <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/DSC_4073-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
-                     <article><p>
-                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                         ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
-                         five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
-                         of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-                         Lorem Ipsum.
-                         </p></article>
-                     <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
-                 </div>
-                 
-                  <div class="col-md-10 blogShort">
-                     <h1>Title 3</h1>
-                     <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/DSC_1681-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
-                     <article><p>
-                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                         ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
-                         five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
-                         of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-                         Lorem Ipsum.
-                         </p></article>
-                     <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
-                 </div>
-                 
-               <div class="col-md-12 gap10"></div>
-             </div>
-</div>
-    {% for post in posts%}
-        <p>Author: {{ post.author }}</p>
+<div class="active-pink-3 active-pink-4 mb-4">
+    <input class="form-control" type="text" placeholder="What Are You Looking For?" aria-label="Search">
+  </div>
+{% for post in posts %}
+
+
+<article class="media content-section">
+  <div class="media-body">
+    <div class="article-metadata">
+      <a class="mr-2" href="#">{{ post.author }}</a>
+      <small class="text-muted">{{ post.date_posted }}</small>
+    </div>
+    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+    <p class="article-content">Condition: {{ post.condition }}</p>
+  </div>
+</article>
+{% endfor %}
+        <!-- <p>Author: {{ post.author }}</p>
         <p>Title: {{ post.title }}</p>
         <p>Date Posted: {{ post.date_posted }}</p>
-        <p>Condition: {{ post.condition }}</p>
+        <p>Condition: {{ post.condition }}</p> -->
 
 
-    {% endfor %}
-    
+                
+                  
+                
 {% endblock content %}
