--- a/marketplace/templates/marketplace/ItemPost_detail.html
+++ b/marketplace/templates/marketplace/ItemPost_detail.html
@@ -1,6 +1,6 @@
 {% extends "marketplace/base.html" %}
+
 {% block content %}
-<article class="media content-section">
   <div class="media-body">
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ object.author }}</a>
@@ -9,5 +9,15 @@
     <h2 class ="article-title">{{ object.title }}</h2>
     <p class="article-content">Condition: {{ object.condition }}</p>
   </div>
-</article>        
+</article>
+
+        <!-- <p>Author: {{ post.author }}</p>
+        <p>Title: {{ post.title }}</p>
+        <p>Date Posted: {{ post.date_posted }}</p>
+        <p>Condition: {{ post.condition }}</p> -->
+
+
+                
+                  
+                
 {% endblock content %}
