--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -14,6 +14,11 @@
         <title>Hello, world!</title>
 </head>
 <body>
+    <div class="active-pink-3 active-pink-4 mb-4">
+        <form action="{% url 'search_results' %}" method="get">
+          <input name="q" type="text" placeholder="What Are You Looking For?">
+        </form>
+        </div>
     <header>
         <div class="container">
             <nav>
