--- a/marketplace/templates/marketplace/search_result.html
+++ b/marketplace/templates/marketplace/search_result.html
@@ -2,9 +2,12 @@
 
 {% block content %}
 <!-- <div class="active-pink-3 active-pink-4 mb-4">
-    <input class="form-control" type="text" placeholder="What Are You Looking For?" aria-label="Search">
-  </div> -->
-{% for post in posts %}
+  <form action="{% url 'search_results' %}" method="get">
+    <input name="q" type="text" placeholder="What Are You Looking For?">
+  </form>
+  </div>
+   -->
+{% for post in object_list %}
 
 
 <article class="media content-section">
