--- a/marketplace/templates/marketplace/home.html
+++ b/marketplace/templates/marketplace/home.html
@@ -13,7 +13,7 @@
       <a class="mr-2" href="#">{{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted }}</small>
     </div>
-    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+    <h2><a class="article-title" href="{% url 'itempost-detail' post.id %}">{{ post.title }}</a></h2>
     <p class="article-content">Condition: {{ post.condition }}</p>
   </div>
 </article>
