--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -23,8 +23,8 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href=#>Home</a></li>
-                    <li><a href=#>News</a></li>
+                    <li><a href='/'>Home</a></li>
+                    <li><a href= #>News</a></li>
                     <li><a href=#>Contact</a></li>
                     <li><a href=#>About</a></li>
                     <li><a href=#>Post </a></li>
