--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -14,35 +13,67 @@
         <title>Hello, world!</title>
 </head>
 <body>
-    <div class="active-pink-3 active-pink-4 mb-4">
-        <form action="{% url 'search_results' %}" method="get">
-          <input name="q" type="text" placeholder="What Are You Looking For?">
-        </form>
-        </div>
     <header>
-        <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">FREE.U</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+      
+            <div class="collapse navbar-collapse" id="navbarsExample03">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">POST</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="#">LOGIN</a>
+                </li>
+                
+              </ul>
+              <form class="form-inline my-2 my-md-0" action="{% url 'search_results' %}" method="get">
+                <input name ="q" class="form-control" type="text" placeholder="Search">
+               
+              </form>
+            </div>
+          </nav>
+         
+        <!-- <div class="container">
             <nav>
                 <ul>
                     <li><a href='/'>Home</a></li>
-                    <li><a href= #>News</a></li>
-                    <li><a href=#>Contact</a></li>
-                    <li><a href=#>About</a></li>
-                    <li><a href=#>Post </a></li>
+                    
                 </ul>
             </nav>
         </div>
-        <!-- Navbar Right Side-->
+        
         <div class ="navbar-nav">
             {% if user.is_authenticated %}
-                <a class = "nav-item nav-link" href = "{% url 'itempost-create' %}">New Post</a>
-                <a class = "nav-item nav-link" href = "{% url 'profile' %}">Profile</a>
-                <a class = "nav-item nav-link" href = "{% url 'logout' %}">Logout</a>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a class = "nav-item nav-link" href = "{% url 'itempost-create' %}">New Post</a>
+                        <li><a class = "nav-item nav-link" href = "{% url 'profile' %}">Profile</a>
+                        <li><a class = "nav-item nav-link" href = "{% url 'logout' %}">Logout</a>
+                    </ul>
+                </nav>
+            </div>
+               
+                
+                
             {% else %}
                 <a class = "nav-item nav-link" href = "{% url 'login' %}">Login</a>
                 <a class = "nav-item nav-link" href = "{% url 'register' %}">Register</a>
             {% endif %}
-        </div>
-    </header>
+        </div> -->
+    <!-- </header> -->
+    <!-- <div class="active-pink-3 active-pink-4 mb-4">
+        <form action="{% url 'search_results' %}" method="get">
+          <input name="q" type="text" placeholder="What Are You Looking For?">
+        </form>
+    </div> -->
     
     
         {% block content %} {% endblock %}
@@ -57,7 +88,5 @@
       <script src="../../assets/js/vendor/popper.min.js"></script>
       <script src="../../dist/js/bootstrap.min.js"></script>
     
-
-
 </body>
   
