--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -22,15 +22,31 @@
       
             <div class="collapse navbar-collapse" id="navbarsExample03">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">POST</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="#">LOGIN</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item active">
+                    <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/post">POST</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link " href="/logout">LOGOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/chat">MESSAGES</a>
+                    </li>
+                {% else %}    
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">REGISTER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/login">LOGIN</a>
+                    </li>
+                  {% endif %}
                 
               </ul>
               <form class="form-inline my-2 my-md-0" action="{% url 'search_results' %}" method="get">
