added gitignore and requirements

--- a/marketplace/templates/marketplace/search_result.html
+++ b/marketplace/templates/marketplace/search_result.html
@@ -1,31 +1,28 @@
 {% extends "marketplace/base.html" %}
 
 {% block content %}
-<!-- <div class="active-pink-3 active-pink-4 mb-4">
-  <form action="{% url 'search_results' %}" method="get">
-    <input name="q" type="text" placeholder="What Are You Looking For?">
-  </form>
-  </div>
-   -->
+
 {% for post in object_list %}
 
 
 <article class="media content-section">
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="#">{{ post.author }}</a>
+      <a class="mr-2" ><strong>Seller:</strong> {{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted }}</small>
     </div>
-    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+    {% if post.item_image %}
+        <div class = "article-img">
+            <img src="{{ post.item_image.url }}">
+        </div>
+        
+    {% endif %}
+    <h2><a class="article-title" href="{% url 'itempost-detail' post.id %}">{{ post.title }}</a></h2>
     <p class="article-content">Condition: {{ post.condition }}</p>
   </div>
 </article>
 {% endfor %}
-        <!-- <p>Author: {{ post.author }}</p>
-        <p>Title: {{ post.title }}</p>
-        <p>Date Posted: {{ post.date_posted }}</p>
-        <p>Condition: {{ post.condition }}</p> -->
-
+   
 
                 
                   
