--- a/marketplace/static/marketplace/main.css
+++ b/marketplace/static/marketplace/main.css
@@ -3,65 +3,41 @@ body {
     background: whitesmoke
 }
 
+
 .container {
     width: 80%;
     margin: 0 auto;
 }
+#biggerone img{
+  width:400px;
 
-/* header {
-    background: #ABFF91
+  height:400px;
 }
-header::after {
-    content: '';
-    display:table;
-    clear:both;
-}
-nav {
-    float: right;
-}
-
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style:none;
-}
-nav li {
-    display: inline-block;
-    margin-left: 70px;
-    padding-top: 15px;
-    margin-bottom: 15px;
-
-    position: relative; 
-}
-
-
-nav a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-nav a:hover {
-    color: grey;
-
-}
-
-nav a::before{ 
-    content: '';
-    display: block;
-    height: 5px;
-    background-color: rebeccapurple;
-    position: absolute;
-    top: 0;
-    width: 0%;
-    transition: all ease-in-out 250ms;
-} */
-/* nav a:hover::before {
-    width: 100%;
-} */
-/* ################################### */
 
 .blogShort{ border-bottom:1px solid #ddd;}
 .add{ padding: 20%; height: 300px;}
+
+
+.navbar{
+  /* color: #34ca78; */
+  color:black;
+}
+
+.form-control{
+  width: 400px !important;
+  /* margin: 0 auto;   */
+}
+.navbar-light .navbar-nav .nav-link  {
+  color: white;
+  /* float: right; */
+  /* margin-left: 20; */
+
+}
+/* .navbar-brand{
+  margin-left: 20;
+  color: white;
+  
+} */
 
 .nav-sidebar { 
     width: 100%;
@@ -119,10 +95,11 @@ nav a::before{
     white-space: pre-line;
   }
   
-  .article-img {
-    height: 65px;
-    width: 65px;
+  .article-img img{
+    height: 100px;
+    width: 100px;
     margin-right: 16px;
+    float: left;
   }
   
   .article-metadata {
@@ -154,13 +131,4 @@ nav a::before{
   }
   @import url('https://fonts.googleapis.com/css?family=Comfortaa');
 
-  /* .active-pink-4 {
-    width: 800px;
-    margin: auto;    
-  }
-
-.active-pink-4 input[type=text]:focus:not([readonly]) {
-border: 1px solid #f48fb1;
-box-shadow: 0 0 0 1px #f48fb1;
-
-} */
+ 
