--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -14,20 +14,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-light " style="background-color: #80FF59;">
             <a class="navbar-brand" href="#">FREE.U</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
       
             <div class="collapse navbar-collapse" id="navbarsExample03">
+                <form class="form-inline my-2 my-md-0" action="{% url 'search_results' %}" method="get">
+                    <input name ="q" class="form-control" type="text" placeholder="Search">
+                   
+                  </form>
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
-                    <li class="nav-item active">
+                    <li class="nav-item">
                     <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/post">POST</a>
+                    <a class="nav-link" href="/itempost/new/">POST</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link " href="/logout">LOGOUT</a>
@@ -49,48 +53,10 @@
                   {% endif %}
                 
               </ul>
-              <form class="form-inline my-2 my-md-0" action="{% url 'search_results' %}" method="get">
-                <input name ="q" class="form-control" type="text" placeholder="Search">
-               
-              </form>
+              
             </div>
           </nav>
          
-        <!-- <div class="container">
-            <nav>
-                <ul>
-                    <li><a href='/'>Home</a></li>
-                    
-                </ul>
-            </nav>
-        </div>
-        
-        <div class ="navbar-nav">
-            {% if user.is_authenticated %}
-            <div class="container">
-                <nav>
-                    <ul>
-                        <li><a class = "nav-item nav-link" href = "{% url 'itempost-create' %}">New Post</a>
-                        <li><a class = "nav-item nav-link" href = "{% url 'profile' %}">Profile</a>
-                        <li><a class = "nav-item nav-link" href = "{% url 'logout' %}">Logout</a>
-                    </ul>
-                </nav>
-            </div>
-               
-                
-                
-            {% else %}
-                <a class = "nav-item nav-link" href = "{% url 'login' %}">Login</a>
-                <a class = "nav-item nav-link" href = "{% url 'register' %}">Register</a>
-            {% endif %}
-        </div> -->
-    <!-- </header> -->
-    <!-- <div class="active-pink-3 active-pink-4 mb-4">
-        <form action="{% url 'search_results' %}" method="get">
-          <input name="q" type="text" placeholder="What Are You Looking For?">
-        </form>
-    </div> -->
-    
     
         {% block content %} {% endblock %}
 
