--- a/marketplace/templates/marketplace/home.html
+++ b/marketplace/templates/marketplace/home.html
@@ -11,9 +11,15 @@
 <article class="media content-section">
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="#">{{ post.author }}</a>
+      <a class="mr-2" ><strong>Seller:</strong> {{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted }}</small>
     </div>
+    {% if post.item_image %}
+        <div class = "article-img">
+            <img src="{{ post.item_image.url }}">
+        </div>
+        
+    {% endif %}
     <h2><a class="article-title" href="{% url 'itempost-detail' post.id %}">{{ post.title }}</a></h2>
     <p class="article-content">Condition: {{ post.condition }}</p>
   </div>
