--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -108,6 +108,7 @@
       </div>
     </div>
   </div>
+  <link rel="stylesheet" href="{% static 'chat/style.css' %}" />
 
 <script src="{% static 'main.js' %}"></script>
 <script src="{% static 'reconnecting-websocket.js' %}"></script>
