--- a/marketplace/templates/marketplace/home.html
+++ b/marketplace/templates/marketplace/home.html
@@ -8,39 +8,13 @@
 
 
 
-<article class="media content-section">
+<article class="media content-section" style="margin-top: 20px;">
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" ><strong>Seller:</strong> {{ post.author }}</a>
+      <a class="mr-2" href="{% url 'profile' post.author %}"><strong>Seller:</strong> {{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted }}</small>
     </div>
     {% if post.item_image %}
-      <script>
-          // console.log("SRC + " + document.getElementById("myimage").src)
-          var wholelink = "{{ post.item_image.url }}"  //original link
-          var regex = /.jpg/i
-          var endposition = wholelink.search(regex) + 4
-
-          var imagelink = wholelink.slice(38, endposition)
-
-          var imageRequest =JSON.stringify({  // creates json
-            bucket:"freeu-images", 
-            key: imagelink,
-            edits: {
-              grayscale: true
-            }
-          })
-          // console.log(imageRequest)
-          var encodedrequest = btoa(imageRequest)
-          var newimagelink = "https://dsv856zfdr0u5.cloudfront.net/" + encodedrequest
-
-          // console.log(imagelink)
-          // console.log(newimagelink)
-          // console.log("Item image: {{ post.item_image }}")
-          // document.getElementById("myimage").src = newimagelink
-          console.log("{{ post.get_new_url }}")
-      </script>
-      
         <div class = "article-img">
           
             <img id = "myimage" src="{{ post.get_new_url }}">
